fix svg on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,28 +22,6 @@ body {
   background-attachment: fixed !important;
 }
 
-@layer components {
-  .customGradient {
-    background: radial-gradient(
-        30% 55.51% at 50% 70%,
-        #ffd3c7 0%,
-        rgba(255, 211, 200, 0.04) 100%
-      ),
-      radial-gradient(
-        30% 80% at 94% 96%,
-        #c8eaff 0%,
-        rgba(230, 245, 255, 0) 70%
-      ),
-      radial-gradient(
-        44% 80% at 4% 94%,
-        rgba(107, 110, 154, 0.8) 0%,
-        rgba(225, 225, 234, 0) 100%
-      ),
-      #ffffff !important;
-    background-attachment: fixed !important;
-  }
-}
-
 .prose {
   max-width: 100%;
 }
